# halo-cli

./: .env.example  .gitignore  README.md  Taskfile.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: app--release.yml  engine--e2e-tests.yml  engine--integration-tests-live.yml  engine--integration-tests.yml  engine--lint-format-typecheck.yml  engine--release.yml  engine--unit-tests.yml
app/: .gitignore  README.md  drizzle.config.ts  electrobun.config.ts  import-from-langfuse.py  package.json  tsconfig.json  vite.config.ts  wrangler.release.toml
app/assets/: app-icon.NOTICE.md
app/docs/: distribution.md
app/scripts/: dev.ts  electrobun-prebuild.ts  fire-test-spans.ts  generate-app-icons.ts  halo-local-runner.py  install.sh  release-manifest.ts  release-verify.ts
app/src/: routeTree.gen.ts  router.tsx
app/src/bun/: appMenu.ts  desktopRuntime.ts  index.ts  windowState.ts
app/src/desktop/: commands.ts
app/src/mainview/: styles.css  trpc.ts
app/src/mainview/desktop/: DesktopCommandCenter.tsx  desktopBridge.ts
app/src/mainview/gallery/: GalleryPage.tsx  GalleryRouteShell.tsx  GalleryShell.tsx  search.tsx
app/src/mainview/halo/: HaloPages.tsx  HaloRunActivity.tsx  (+3 more)
app/src/routes/: __root.tsx  analysis.tsx  components.custom.tsx  components.foundations.tsx  components.inputs.tsx  components.navigation.tsx  components.overlays.tsx  components.tsx  import-data.tsx  index.tsx  sessions.tsx  settings.tsx  traces.tsx
app/src/server/: app.ts  router.ts  start.ts
app/tests/: desktop-commands.test.ts  desktop-runtime.test.ts  fileimport.test.ts  fire-test-spans.test.ts  follow-latest.test.ts  halo-agent-console.test.ts  halo.test.ts  http.test.ts  langfuse.test.ts  live.test.ts  otlp.test.ts  router.test.ts  span-tree.test.ts
app/tests/gator/: gator-multiturn.test.ts  gator-singleshot.ts
app/tests/support/: otlp-fixtures.ts
app/workers/: halo-release-worker.ts
docs/integrations/: openai-agents-sdk.md
engine/: engine_config.py  errors.py  main.py  model_provider_config.py
engine/agents/: agent_config.py  agent_context.py  compactor.py  engine_run_state.py  llm_retry.py  openai_agent_runner.py  openai_event_mapper.py
engine/code/: code_repo.py  models.py
engine/sandbox/: models.py  sandbox.py
engine/telemetry/: setup.py
engine/tools/: code_tools.py  subagent_tool_factory.py  synthesis_tool.py  tool_protocol.py
halo_cli/: README.md  _env.py  backfill.py  convert.py  jobs.py  main.py
skills/claude/: SKILL.md
tests/: _sdk_events.py  conftest.py
tests/integration/: test_engine_client_lifecycle.py  test_engine_compaction.py  test_engine_error_propagation.py  test_engine_streaming.py  test_engine_subagent.py  test_engine_turn_counter.py  test_tool_code_tools.py  test_tool_git_tools.py  test_tool_synthesize_traces.py  tool_isolation_kit.py
tests/probes/: README.md  example_circuit_breaker.py  example_compaction.py  example_depth_enforcement.py  example_streaming_contract.py  example_subagent_lifecycle.py  probe_kit.py
tests/unit/: test_engine_config.py  test_halo_cli.py  test_main.py  test_telemetry.py
tests/unit/agents/: test_agent_config.py  test_agent_context.py  test_engine_run_state.py  test_llm_retry.py  test_openai_agent_runner.py  test_openai_event_mapper.py
tests/unit/code/: test_code_repo.py
tests/unit/sandbox/: test_models.py  test_sandbox.py
tests/unit/tools/: test_run_code_tool_gating.py  test_sdk_adapter.py  test_subagent_tool_factory.py  test_synthesis_tool.py
(+109 files in other folders)
