[project]
name = "halo-engine"
version = "0.1.21"
description = "HALO engine: LLM agent runtime over OTel trace data, with bundled CLI."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pydantic==2.13.3",
    "openai==2.32.0",
    "openai-agents==0.14.7",
    "numpy==2.2.6",
    "pandas==2.2.3",
    # Ships the deno binary as a platform wheel so the WASM sandbox runs
    # out-of-the-box after `pip install`/`uv sync`. Wheels exist for macOS
    # (x86_64/arm64), Linux (x86_64/aarch64), and Windows (x86_64); on
    # unsupported platforms (e.g. musl Linux) pip will fall back to the
    # sdist and the sandbox will look for ``deno`` on PATH instead.
    "deno==2.7.14",
    # ripgrep is REQUIRED for the code tools (glob/grep/tree all run through it
    # so .gitignore is honoured natively). Ships as a platform wheel so it works
    # out-of-the-box, but wheels exist only for macOS (arm64) and Linux (x86_64),
    # so the marker pins the dep to just those platforms — elsewhere it is not
    # pulled (no broken install) and the user must have a system ``rg`` on PATH,
    # otherwise opening a repo fails fast with an install hint.
    "ripgrep==15.1.0; (sys_platform == 'darwin' and platform_machine == 'arm64') or (sys_platform == 'linux' and platform_machine == 'x86_64')",
    "typer==0.25.0",
    "rich==15.0.0",
    # Catalyst tracing is mandatory: the engine always imports it for
    # ``halo_agent_span`` and the optional Catalyst-OTLP backend selected
    # by ``CATALYST_OTLP_TOKEN``. When the token is unset and the local
    # JSONL backend is in use, OTel's proxy tracer makes the wrapper a
    # no-op without any extra branching in engine code.
    "inference-catalyst-tracing[openai-agents]==0.0.23",
]

[project.scripts]
halo = "halo_cli.main:app"

[dependency-groups]
dev = [
    "basedpyright==1.38.3",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.12",
]

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "halo_cli"]

[tool.hatch.build.targets.wheel.force-include]
"engine/sandbox/runner.js" = "engine/sandbox/runner.js"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "live: test hits a live external service (LLM provider, etc.) and requires credentials. Excluded from the default integration run; included in `task test:integration:live` and the release pipeline.",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["demo", "app"]

[tool.ruff.lint]
# Enabled rule families:
# E/W: pycodestyle errors and warnings
# F: Pyflakes correctness checks
# I: import sorting
select = ["E", "F", "W", "I"]
ignore = [
    "E402",  # module-import-not-at-top: allowed where setup code must run before imports
    "E501",  # line-too-long: handled by the formatter where it can safely wrap
    "E741",  # ambiguous-variable-name: allow short names like l/O/I in local contexts
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401"]      # imported-but-unused: tests sometimes import fixtures/types for clarity
"**/__init__.py" = ["F401"] # imported-but-unused: package init files can re-export names

[tool.ruff.format]
quote-style = "double"
